--- a/PCA_Spine.ipynb
+++ b/PCA_Spine.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('E:/data/data science/data course/DATASET/spine.csv')"
+    "df = pd.read_csv('.../DATASET/spine.csv')"
    ]
   },
   {
